--- a/ShortNotes/ShortNotes/SplashScreen.storyboard
+++ b/ShortNotes/ShortNotes/SplashScreen.storyboard
@@ -25,7 +25,7 @@
                                 </constraints>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.2196078431372549" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="2Pb-MT-kv7" firstAttribute="centerY" secondItem="wfR-at-Ycw" secondAttribute="centerY" id="fbp-7O-wJN"/>
                             <constraint firstItem="2Pb-MT-kv7" firstAttribute="centerX" secondItem="wfR-at-Ycw" secondAttribute="centerX" id="ivT-Ky-rAx"/>
